# merry

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
src/: main.rs
ui/: main.slint  merry.slint
