[package]
name = "merry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mewe = "0.1.0"
slint = "1.4.1"
tokio = { version = "1.36.0", features = ["macros"] }

[build-dependencies]
slint-build = "1.4.1"
